# Sortingshop

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
src/sortingshop/: __init__.py  config.py  exiftool.py  singleton.py  sortingshop.py
src/sortingshop/log/: log.py
src/sortingshop/media/: mediafile.py  mediaitem.py  medialist.py  metadatasource.py  sidecar.py  taglist.py  tagsets.py
src/sortingshop/settings/: config.ini  exiftool_config.txt
src/sortingshop/ui/: ui.py  wxpython.py
