# pyproject.toml
[project]
name = 'sortingshop'
version = '1.1.0'
description = ''
readme = 'README.md'
requires-python = '>=3.6'
authors = [
{name = 'Eike Kühn', email = 'eike.kuehn@pixelwoelkchen.de'},
]
maintainers = [
{name = 'Eike Kühn', email = 'eike.kuehn@pixelwoelkchen.de'},
]
classifiers = [
    'License :: OSI Approved :: The Unlicense (Unlicense)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python'
]
dependencies = [
    'wxPython~=4.2.0'
]

[project.urls]
homepage = 'https://github.com/randomchars42/sortingshop'
documentation = 'https://github.com/randomchars42/sortingshop'
source = 'https://github.com/randomchars42/sortingshop'
tracker = 'https://github.com/randomchars42/sortingshop/issues'

[project.scripts]
sortingshop = 'sortingshop.sortingshop:main'

[build-system]
requires = [
    'build~=0.7.0',
    'docutils~=0.18.1',
    'wheel~=0.37.1',
    'setuptools~=65.0.0',
    'twine~=3.8.0',
    'types-setuptools~=57.4.8',
    'types-pkg-resources~=0.1.3',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
#"*" = ['*.ini', '*.yaml']
"sortingshop" = ['settings/config.ini']
"sortingshop.ui" = ['resources/*']

[tool.mypy]
# add .venv to the mypy path to detect imported packages installed by
# pipenv
# update the path locally to match your settings, i.e. change the
# python version and the path to the venv as it currently depends on
# `export PIPENV_VENV_IN_PROJECT=1` being set
mypy_path = '$MYPY_CONFIG_FILE_DIR/src/'
show_error_codes = true
